them file bai tap thuc hanh ban phim

--- a/sukienchuot.html
+++ b/sukienchuot.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<form>
-		<img id="my" src="ball.jpg" alt="">	    
+		<img id="my" src='ball.jpg' alt="">	    
 	    <p>Kích vào nút để quả bóng chạy sang bên phải.</p>
 	    <input type="button" value="Click Me" onclick="moveRight();" />
 	</form>
